--- a/css/theme/cw.css
+++ b/css/theme/cw.css
@@ -36,18 +36,18 @@ img {
     .reveal .slides > section > section {
       line-height: 1.3;
       font-weight: inherit; }
-      .reveal .slides > section > section section.with-image {
+      .reveal .slides > section > section.with-image {
         top: 50px !important;
         font-size: 30px; }
-        .reveal .slides > section > section section.with-image h1 {
+        .reveal .slides > section > section.with-image h1 {
           font-size: 1.55em; }
-        .reveal .slides > section > section section.with-image h2 {
+        .reveal .slides > section > section.with-image h2 {
           font-size: 1em; }
-        .reveal .slides > section > section section.with-image h3 {
+        .reveal .slides > section > section.with-image h3 {
           font-size: 1em; }
-        .reveal .slides > section > section section.with-image h4 {
+        .reveal .slides > section > section.with-image h4 {
           font-size: 1em; }
-        .reveal .slides > section > section section.with-image img {
+        .reveal .slides > section > section.with-image img {
           max-width: 70%;
           cursor: pointer; }
     .reveal .slides > section h1, .reveal .slides > section h2, .reveal .slides > section h3, .reveal .slides > section h4, .reveal .slides > section h5, .reveal .slides > section h6 {
