--- a/css/theme/source/cw.sass
+++ b/css/theme/source/cw.sass
@@ -62,6 +62,7 @@ img
     > section
       line-height: 1.3
       font-weight: inherit
+    section
       &.with-image
         top: 50px !important
         +make-slide-with-image
