--- a/css/theme/source/cw.sass
+++ b/css/theme/source/cw.sass
@@ -40,7 +40,7 @@ img
   height: auto
 
 @mixin make-slide-with-image
-  font-size: 30px
+  font-size: 20px
   h1
     font-size: 1.55em
   h2
@@ -63,6 +63,7 @@ img
       line-height: 1.3
       font-weight: inherit
     section
+      padding-top: 0 !important
       &.with-image
         top: 50px !important
         +make-slide-with-image
