--- a/css/theme/source/cw.sass
+++ b/css/theme/source/cw.sass
@@ -185,20 +185,21 @@ img
       display: inline-block
       font-size: 0.6em
       line-height: 1.2em
-      vertical-align: top
+      vertical-align: middle
       *
-        vertical-align: top
+        vertical-align: middle
     a
-      color: #8b743d
+      color: #ffb01e
       text-decoration: none
       -webkit-transition: color .15s ease
       -moz-transition: color .15s ease
       transition: color .15s ease
       outline: none
       &:hover
-        color: #c0a86e
+        color: #ffb01e
         text-shadow: none
         border: none
+        text-decoration: underline
     .roll span:after
       color: #fff
       background: #564826
