--- a/css/theme/cw.css
+++ b/css/theme/cw.css
@@ -1,10 +1,10 @@
 @import url(../../lib/font/league-gothic/league-gothic.css);
-@import url(https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic);
+@import url(https://fonts.googleapis.com/css?family=Open+Sans:400,700,400italic,700italic);
 /********************************************* */
 /* GLOBAL STYLES */
 /******************************************** */
 body {
-  background: url("https://www.creative-workflow.berlin/images/logos/bg.png") repeat #f7f7f7; }
+  background: url("../../images/bg.png") repeat #f7f7f7; }
   body.loading, body.flex-centered {
     display: flex;
     align-items: center;
@@ -30,7 +30,7 @@ img {
   position: absolute;
   bottom: 10px;
   left: 10px;
-  z-index: 10000;
+  z-index: 1;
   width: auto; }
 
 .presentation-selector-container {
@@ -52,7 +52,7 @@ img {
       font-size: 30px;
       font-family: OpenSans,HelveticaNeue,Arial,sans-serif;
       font-weight: bold;
-      padding: 5px 3px;
+      padding: 10px 10px;
       position: relative;
       left: 30px; }
       .presentation-selector-container .presentation-selector a:before {
@@ -60,45 +60,54 @@ img {
         position: absolute;
         color: #5e5e5e;
         font-weight: 700;
-        left: -15px; }
+        left: -25px; }
 
 .reveal {
   display: none; }
+  .reveal .slide-number {
+    background: transparent;
+    color: black; }
   .reveal a.github-source {
     background: url("../../images/github.png") no-repeat;
     background-size: contain;
     display: inline-block;
-    width: 40px;
-    height: 40px;
-    opacity: .2;
+    width: 30px;
+    height: 30px;
+    opacity: .05;
     position: relative;
     right: 20px;
-    top: 20px; }
+    top: 10px; }
+    .reveal a.github-source:hover {
+      opacity: .1; }
   .reveal .slides > section {
     line-height: 1.3;
     font-weight: inherit;
-    font-size: 30px; }
+    font-size: 26px; }
     .reveal .slides > section > section {
       line-height: 1.3;
       font-weight: inherit; }
-    .reveal .slides > section section {
-      padding-top: 0 !important; }
-      .reveal .slides > section section.with-image {
-        top: 50px !important;
-        font-size: 26px; }
-        .reveal .slides > section section.with-image h1 {
-          font-size: 60px; }
-        .reveal .slides > section section.with-image h2 {
-          font-size: 40px; }
-        .reveal .slides > section section.with-image h3 {
-          font-size: 30px; }
-        .reveal .slides > section section.with-image h4 {
-          font-size: 1em; }
-        .reveal .slides > section section.with-image img {
-          max-width: 70%;
-          cursor: pointer; }
+    .reveal .slides > section section.with-image {
+      font-size: 20px; }
+      .reveal .slides > section section.with-image h1, .reveal .slides > section section.with-image h2, .reveal .slides > section section.with-image h3, .reveal .slides > section section.with-image h4, .reveal .slides > section section.with-image h5, .reveal .slides > section section.with-image h6 {
+        margin: 0 0 20px 0; }
+        .reveal .slides > section section.with-image h1 i, .reveal .slides > section section.with-image h1 em, .reveal .slides > section section.with-image h2 i, .reveal .slides > section section.with-image h2 em, .reveal .slides > section section.with-image h3 i, .reveal .slides > section section.with-image h3 em, .reveal .slides > section section.with-image h4 i, .reveal .slides > section section.with-image h4 em, .reveal .slides > section section.with-image h5 i, .reveal .slides > section section.with-image h5 em, .reveal .slides > section section.with-image h6 i, .reveal .slides > section section.with-image h6 em {
+          color: #999;
+          font-size: 50%;
+          font-weight: normal; }
+      .reveal .slides > section section.with-image h1 {
+        font-size: 50px;
+        margin: 0 0 40px 0; }
+      .reveal .slides > section section.with-image h2 {
+        font-size: 30px; }
+      .reveal .slides > section section.with-image h3 {
+        font-size: 20px; }
+      .reveal .slides > section section.with-image h4 {
+        font-size: 1em; }
+      .reveal .slides > section section.with-image img {
+        max-width: 70%;
+        cursor: pointer; }
     .reveal .slides > section h1, .reveal .slides > section h2, .reveal .slides > section h3, .reveal .slides > section h4, .reveal .slides > section h5, .reveal .slides > section h6 {
-      margin: 0 0 20px 0;
+      margin: 0 0 40px 0;
       color: #37444e;
       font-family: OpenSans,HelveticaNeue,Arial,sans-serif;
       font-weight: bold;
