--- a/css/theme/source/cw.sass
+++ b/css/theme/source/cw.sass
@@ -1,6 +1,6 @@
 @import url(../../lib/font/league-gothic/league-gothic.css)
 
-@import url(https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic)
+@import url(https://fonts.googleapis.com/css?family=Open+Sans:400,700,400italic,700italic)
 
 /*********************************************
 /* GLOBAL STYLES
@@ -11,7 +11,7 @@
   font-weight: bold
 
 body
-  background: url('https://www.creative-workflow.berlin/images/logos/bg.png') repeat #f7f7f7
+  background: url('../../images/bg.png') repeat #f7f7f7
 
   &.loading, &.flex-centered
     display: flex
@@ -35,26 +35,11 @@ img
   max-width: 100%
   height: auto
 
-@mixin make-slide-with-image
-  font-size: 26px
-  h1
-    font-size: 60px
-  h2
-    font-size: 40px
-  h3
-    font-size: 30px
-  h4
-    font-size: 1em
-  img
-    max-width: 70%
-    cursor: pointer
-
-
 .logo
   position: absolute
   bottom: 10px
   left: 10px
-  z-index: 10000
+  z-index: 1
   width: auto
 
 .presentation-selector-container
@@ -76,7 +61,7 @@ img
       text-decoration: none
       font-size: 30px
       +make-font
-      padding: 5px 3px
+      padding: 10px 10px
       position: relative
       left: 30px
       &:before
@@ -84,36 +69,61 @@ img
         position: absolute
         color: #5e5e5e
         font-weight: 700
-        left: -15px
+        left: -25px
 
 .reveal
   display: none
+  .slide-number
+    background: transparent
+    color: black
   a.github-source
     background: url('../../images/github.png') no-repeat
     background-size: contain
     display: inline-block
-    width: 40px
-    height: 40px
-    opacity: .2
+    width: 30px
+    height: 30px
+    opacity: .05
     position: relative
     right: 20px
-    top: 20px
+    top: 10px
+    &:hover
+      opacity: .1
 
   .slides > section
     line-height: 1.3
     font-weight: inherit
-    font-size: 30px
+    font-size: 26px
+
+    // top level section
     > section
       line-height: 1.3
       font-weight: inherit
+
+    // slide section
     section
-      padding-top: 0 !important
       &.with-image
-        top: 50px !important
-        +make-slide-with-image
+        font-size: 20px
+        h1, h2, h3, h4, h5, h6
+          margin: 0 0 20px 0
+          i, em
+            color: #999
+            font-size: 50%
+            font-weight: normal
+        h1
+          font-size: 50px
+          margin: 0 0 40px 0
+        h2
+          font-size: 30px
+        h3
+          font-size: 20px
+        h4
+          font-size: 1em
+        img
+          max-width: 70%
+          cursor: pointer
 
     h1, h2, h3, h4, h5, h6
-      margin: 0 0 20px 0
+      margin: 0 0 40px 0
       color: #37444e
       +make-font
       line-height: 1.2
