--- a/css/theme/cw.css
+++ b/css/theme/cw.css
@@ -116,7 +116,7 @@ img {
       text-shadow: none;
       word-wrap: break-word; }
     .reveal .slides > section h1 {
-      font-size: 80px; }
+      font-size: 50px; }
     .reveal .slides > section h2 {
       font-size: 60px; }
     .reveal .slides > section h3 {
@@ -130,9 +130,24 @@ img {
       max-width: 95%;
       max-height: 95%; }
     .reveal .slides > section strong, .reveal .slides > section b {
-      font-weight: bold; }
+      font-weight: 600; }
     .reveal .slides > section em {
       font-style: italic; }
+      .reveal .slides > section em > em, .reveal .slides > section em > strong {
+        font-style: normal;
+        font-weight: 600;
+        white-space: nowrap;
+        position: relative;
+        color: #444;
+        font-size: 90%; }
+        .reveal .slides > section em > em:after, .reveal .slides > section em > strong:after {
+          content: '';
+          position: absolute;
+          width: 100%;
+          height: 0;
+          left: 0;
+          bottom: 1px;
+          border-bottom: 2px solid red; }
     .reveal .slides > section ol, .reveal .slides > section dl, .reveal .slides > section ul {
       display: inline-block;
       text-align: left;
@@ -171,6 +186,8 @@ img {
       box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.2); }
       .reveal .slides > section blockquote p:first-child, .reveal .slides > section blockquote p:last-child {
         display: inline-block; }
+      .reveal .slides > section blockquote a {
+        font-size: 12px; }
     .reveal .slides > section q {
       font-style: italic; }
     .reveal .slides > section pre {
