--- a/css/theme/source/cw.sass
+++ b/css/theme/source/cw.sass
@@ -131,7 +131,7 @@ img
       text-shadow: none
       word-wrap: break-word
     h1
-      font-size: 80px
+      font-size: 50px
     h2
       font-size: 60px
     h3
@@ -145,9 +145,24 @@ img
       max-width: 95%
       max-height: 95%
     strong, b
-      font-weight: bold
+      font-weight: 600
     em
       font-style: italic
+      > em, > strong
+        font-style: normal
+        font-weight: 600
+        white-space: nowrap
+        position: relative
+        color: #444
+        font-size: 90%
+        &:after
+          content: ''
+          position: absolute
+          width: 100%
+          height: 0
+          left: 0
+          bottom: 1px
+          border-bottom: 2px solid red
     ol, dl, ul
       display: inline-block
       text-align: left
@@ -188,6 +203,8 @@ img
       p
         &:first-child, &:last-child
           display: inline-block
+      a
+        font-size: 12px
     q
       font-style: italic
     pre
